# curb

./: .gitignore  AGENTS.md  Cargo.toml  README.md  SECURITY.md  SPEC.md  VISION.md  build.rs  go.mod  go.sum  rust-toolchain.toml
.github/: CODEOWNERS  pull_request_template.md
.groom/: review-scores.ndjson
.harness-kit/: agent-readiness.yaml  delegation-receipts.jsonl
backlog.d/: 001-adopt-misty-step-comic-ops-aesthetic.md  002-ledger-assert-enforcement-decisions.md  003-safe-process-identity-calibration.md  004-actionable-alerts-and-acknowledgement-ux.md  004-property-test-identity-seal.md  005-coverage-floor-in-ci.md  006-remotion-demo-video-after-safety.md  007-unify-enforcement-runtime.md  008-route-runtime-truth-through-service.md  009-max-lines-per-file-ratchet.md  009-route-cli-through-service-boundary.md  010-strict-lint-pass.md  011-tauri-desktop-app.md  012-embeddable-governor-core.md  012-single-session-status-classifier.md  013-dashboard-read-model-and-ui-decomposition.md  014-linux-e2e-enforcement.md  023-post-closeout-grooming-and-dogfood.md  024-dogfood-evidence-matrix.md  025-headless-server-contract.md  026-structured-observability.md  027-quality-gates-and-contract-tests.md  029-agent-readiness-contract.md  030-api-ui-contract-drift-guard.md  031-fast-feedback-and-cross-platform-gates.md  032-readiness-latency-and-observability-completion.md  033-hosted-proof-and-tranche-closeout.md  034-stabilize-hosted-fast-feedback-e2e.md  035-prove-long-running-sidecar-dogfood.md  036-build-operator-recovery-cockpit.md  037-exercise-live-operator-workflows.md  038-trim-evidence-and-doc-navigation.md  039-finish-facade-and-presenter-simplification.md
configs/: curb.example.yaml
curb-core/: Cargo.toml
curb-core/src/: config.rs  governor.rs  ledger.rs  lib.rs  local_enforcer.rs  onboarding.rs  platform.rs  runtime.rs  service.rs  tail.rs  usage.rs  usagewatch.rs  write_path.rs
curb-core/src/config/: defaults.rs  duration.rs  policy_merge.rs  preset.rs  storage.rs  tests.rs
curb-core/src/ledger/: taxonomy.rs
curb-core/src/platform/: capture.rs  notification.rs  target.rs  termination.rs  tests.rs
curb-core/src/runtime/: cache.rs  config_store.rs  readiness.rs  tests.rs  usage_tick.rs  watcher.rs
curb-core/src/service/: ack_state.rs  config_model.rs  correlation.rs  delta.rs  events_model.rs  recovery.rs  snapshot_model.rs  tests.rs
curb-core/src/usage/: cache.rs  claude.rs  codex.rs  discovery.rs  events.rs  lines.rs  pi.rs  provider.rs  tests.rs
curb-core/src/usagewatch/: events.rs  tests.rs
curb-core/src/write_path/: ack_store.rs  ledger_events.rs  stop_identity.rs  tests.rs
curb-core/tests/: e2e_enforcement.rs
docs/: agent-readiness-roadmap.md  application-architecture.md  application-design.md  brant-admin-control-package.md  contributor-guide.md  desktop-application-design.md  dogfooding.md  internal-desktop-app.md  local-agent-watchdog-spec.md  observability.md  olympus-governor-integration.md  product-principles.md  provider-adapter-research.md  readiness-tranche-closeout.md  readiness-tranche-commit-plan.md  refactor-map.md  release-evidence.md  rust-rewrite.md  ui-application-design.md  user-guide.md  walkthrough.html
scripts/: build-ui.sh  check-dependency-audit.sh  check-desktop.sh  check-fast.sh  check-file-length.sh  check-product-principles.sh  check-secrets.py  check-setup.sh  validate.sh  (+9 more)
(+516 files in other folders)
