[package]
name = "curb"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Local AI-agent visibility and watchdog tool"

[lib]
name = "curb"
path = "src/lib.rs"

[[bin]]
name = "curb"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.100"
chrono = { version = "0.4.42", features = ["serde"] }
clap = { version = "4.6.0", features = ["derive"] }
hex = "0.4.3"
regex = "1.12.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.148", features = ["preserve_order"] }
serde_yaml = "0.9.34"
sha2 = "0.10.9"
thiserror = "2.0.17"
url = "2.5.8"

[dev-dependencies]
assert_cmd = "2.1.1"
predicates = "3.1.3"
tempfile = "3.24.0"
